update translations from crowdin

--- a/src/translations/de/ch/de-CH-componentTranslations.json
+++ b/src/translations/de/ch/de-CH-componentTranslations.json
@@ -17,14 +17,14 @@
       "atLeastOneUpperCase": "Mindestens ein Großbuchstabe",
       "buttonLabel": "Los!",
       "continueWithGoogle": "Machen Sie weiter mit Google",
-      "emailId": "email",
+      "emailId": "Email",
       "emailPlaceholder": "Benutzername oder E-Mail",
       "forgotPassword": "Passwort vergessen?",
       "incorrectEmailOrPassword": "Falscher Benutzername/E-Mail oder Passwort",
       "invalidEmailPlaceholder": "Fehler: Ungültige E-Mail",
       "minimumCharacters": "Mindestens 8 Zeichen",
       "pageTitle": "",
-      "passwordId": "password",
+      "passwordId": "Passwort",
       "passwordPlaceholder": "Passwort",
       "pickPassword": "Wählen Sie ein Passwort",
       "selectLanguage": "Sprache auswählen",
@@ -42,7 +42,14 @@
       "loadingAssignments": "Lade Zuordnungen",
       "noAssignments": "Sie haben keine Zuordnungen!",
       "selectAssignment": "Wählen Sie eine Zuordnung aus",
-      "showOptionalAssignments": "Optionale Zuordnungen anzeigen"
+      "showOptionalAssignments": "Optionale Zuordnungen anzeigen",
+      "assignments": "Zuordnungen",
+      "current": "Aktuelle",
+      "past": "Vergangene",
+      "upcoming": "Bevorstehende",
+      "noCurrentAssignmentsFound": "Keine aktuellen Zuordnungen gefunden",
+      "noPastAssignmentsFound": "Keine vergangenen Zuordnungen gefunden",
+      "noUpcomingAssignmentsFound": "Keine bevorstehenden Zuordnungen gefunden"
     },
     "home-selector": {
       "inactivityLogout": "Sie werden aus Sicherheitsgründen bald abgemeldet. Bitte klicken Sie auf \"Weiter\", wenn Sie Ihre Sitzung fortsetzen möchten. \n Andernfalls werden Sie in { timeLeft } Sekunden automatisch abgemeldet.",
