--- a/src/translations/de/de-componentTranslations.json
+++ b/src/translations/de/de-componentTranslations.json
@@ -5,7 +5,7 @@
       "assentTitle": "Zustimmung",
       "consentTitle": "Zustimmung",
       "consentUpdatedStatus": "Zustimmungsstatus aktualisiert",
-      "header": "Consent",
+      "header": "Zustimmung",
       "rejectButton": "Nein, mich abmelden",
       "title": "",
       "toastHeader": "Bestätigt"
@@ -17,14 +17,14 @@
       "atLeastOneUpperCase": "Mindestens ein Großbuchstabe",
       "buttonLabel": "Los!",
       "continueWithGoogle": "Machen Sie weiter mit Google",
-      "emailId": "email",
+      "emailId": "E-Mail",
       "emailPlaceholder": "Benutzername oder E-Mail",
       "forgotPassword": "Passwort vergessen?",
       "incorrectEmailOrPassword": "Falscher Benutzername/E-Mail oder Passwort",
       "invalidEmailPlaceholder": "Fehler: Ungültige E-Mail",
       "minimumCharacters": "Mindestens 8 Zeichen",
       "pageTitle": "",
-      "passwordId": "password",
+      "passwordId": "Passwort",
       "passwordPlaceholder": "Passwort",
       "pickPassword": "Wählen Sie ein Passwort",
       "selectLanguage": "Sprache auswählen",
@@ -42,7 +42,14 @@
       "loadingAssignments": "Lade Zuordnungen",
       "noAssignments": "Sie haben keine Zuordnungen!",
       "selectAssignment": "Wählen Sie eine Zuordnung aus",
-      "showOptionalAssignments": "Optionale Zuordnungen anzeigen"
+      "showOptionalAssignments": "Optionale Zuordnungen anzeigen",
+      "assignments": "Zuordnungen",
+      "current": "Aktuell",
+      "past": "Vergangen",
+      "upcoming": "Kommend",
+      "noCurrentAssignmentsFound": "Keine aktuellen Zuordnungen gefunden",
+      "noPastAssignmentsFound": "Keine vergangenen Zuordnungen gefunden",
+      "noUpcomingAssignmentsFound": "Keine kommenden Zuordnungen gefunden"
     },
     "home-selector": {
       "inactivityLogout": "Sie werden aus Sicherheitsgründen bald abgemeldet. Bitte klicken Sie auf \"Weiter\", wenn Sie Ihre Sitzung fortsetzen möchten. \n Andernfalls werden Sie in { timeLeft } Sekunden automatisch abgemeldet.",
