--- a/src/translations/en/gh/en-GH-componentTranslations.json
+++ b/src/translations/en/gh/en-GH-componentTranslations.json
@@ -42,7 +42,14 @@
       "loadingAssignments": "Loading Assignments",
       "noAssignments": "You have no assignments!",
       "selectAssignment": "Select an assignment",
-      "showOptionalAssignments": "Show optional assignments"
+      "showOptionalAssignments": "Show optional assignments",
+      "assignments": "",
+      "current": "",
+      "past": "",
+      "upcoming": "",
+      "noCurrentAssignmentsFound": "",
+      "noPastAssignmentsFound": "",
+      "noUpcomingAssignmentsFound": ""
     },
     "home-selector": {
       "inactivityLogout": "You will soon be logged out for security purposes. Please click \"Continue\" if you wish to continue your session.\n Otherwise, you will be automatically logged out in { timeLeft } seconds.",
