--- a/src/translations/es/co/es-CO-componentTranslations.json
+++ b/src/translations/es/co/es-CO-componentTranslations.json
@@ -87,7 +87,7 @@
       "heartsAndFlowersName": "Corazones y Flores",
       "introDescription": "Aprende a jugar a nuestros juegos. ",
       "introName": "Introducción",
-      "matrixReasoningDescription": "Encuentra la pieza que falta para completar el rompecabeza.",
+      "matrixReasoningDescription": "Encuentra la pieza que falta para completar el rrompecabezas.",
       "matrixReasoningName": "Razonamiento Matricial",
       "mefsDescription": "Empareja las formas y los colores.",
       "mefsName": "El León y El Mono",
@@ -123,20 +123,23 @@
       "trogName": "Comprensión de Frases",
       "vocabDescription": "Escucha la palabra y elige la imagen correspondiente.",
       "vocabName": "Vocabulario",
-      "pa": "Language Sounds",
-      "sre": "Sentence Reading",
-      "swr": "Word Reading",
-      "taskNoLongerAvailable": "Task No longer Available",
-      "taskNotYetAvailable": "Task Not available yet"
+      "pa": "Fonema",
+      "sre": "Frase",
+      "swr": "Palabra",
+      "taskNoLongerAvailable": "Ya no está disponible",
+      "taskNotYetAvailable": "Aún no está disponible",
+      "paDescription": "Identificar el sonido en las palabras",
+      "sreDescription": "Lee las oraciones tan rápido como puedas y decide si son verdaderas o falsas.",
+      "swrDescription": "Las palabras aparecerán rápidamente en la pantalla. Decide si son reales o inventadas."
     },
     "navbar": {
-      "greeting": "¡Hola",
+      "greeting": "¡Hola!",
       "signOut": "Salir"
     },
     "participant-sidebar": {
       "grade": "Grado",
       "studentInfo": "Información del estudiante",
-      "tasksCompleted": "¡tareas completadas!",
+      "tasksCompleted": "¡Tareas completadas! ",
       "statusCurrent": "Actual",
       "statusOpened": "Opened",
       "statusClose": "Cerrar",
@@ -145,9 +148,9 @@
       "statusUpcoming": "Próximo",
       "statusPast": "Pasado",
       "assignments": "Asignaciones",
-      "noCurrentAssignments": "No Current Assignments",
-      "noUpcomingAssignments": "No Upcoming assignments",
-      "noPastAssignments": "No past assignments"
+      "noCurrentAssignments": "You have no current assignments.",
+      "noUpcomingAssignments": "You have no upcoming assignments.",
+      "noPastAssignments": "You have no past assignments."
     },
     "sentry-form": {
       "buttonLabel": "Reportar un problema",
