--- a/src/translations/de/de-componentTranslations.json
+++ b/src/translations/de/de-componentTranslations.json
@@ -130,9 +130,7 @@
       "taskNotYetAvailable": "Noch nicht verfügbar",
       "paDescription": "Den Klang in den Wörtern identifizieren.",
       "sreDescription": "Lies die Sätze so schnell wie möglich und entscheide, ob sie wahr oder falsch sind.",
-      "swrDescription": "Die Wörter werden schnell auf dem Bildschirm erscheinen. Entscheide, ob sie echt oder erfunden sind.",
-      "hostileAttributionName": "Mit Absicht oder durch Zufall?",
-      "hostileAttributionDescription": "Hör dir die Wörter an und wähle das passende Bild dazu aus."
+      "swrDescription": "Die Wörter werden schnell auf dem Bildschirm erscheinen. Entscheide, ob sie echt oder erfunden sind."
     },
     "navbar": {
       "greeting": "Hallo",
