--- a/src/translations/en/us/en-US-componentTranslations.json
+++ b/src/translations/en/us/en-US-componentTranslations.json
@@ -130,9 +130,7 @@
       "taskNotYetAvailable": "Not available yet",
       "paDescription": "Identify the sound in the words.",
       "sreDescription": "Read the sentences as quickly as you can and decide if they are true or false.",
-      "swrDescription": "The words will appear quickly on the screen. Decide if they are real or made-up.",
-      "hostileAttributionName": "On Purpose or by Accident?",
-      "hostileAttributionDescription": "Listen to the stories and answer the questions."
+      "swrDescription": "The words will appear quickly on the screen. Decide if they are real or made-up."
     },
     "navbar": {
       "greeting": "Hi",
