--- a/src/translations/en/us/en-US-componentTranslations.json
+++ b/src/translations/en/us/en-US-componentTranslations.json
@@ -132,7 +132,9 @@
       "sreDescription": "Read the sentences as quickly as you can and decide if they are true or false.",
       "swrDescription": "The words will appear quickly on the screen. Decide if they are real or made-up.",
       "hostileAttributionName": "On Purpose or by Accident?",
-      "hostileAttributionDescription": "Listen to the stories and answer the questions."
+      "hostileAttributionDescription": "Listen to the stories and answer the questions.",
+      "childSurveyName": "Thoughts and Feelings",
+      "childSurveyDescription": "Answer questions about your time at school."
     },
     "navbar": {
       "greeting": "Hi",
