--- a/src/translations/es/co/es-CO-componentTranslations.json
+++ b/src/translations/es/co/es-CO-componentTranslations.json
@@ -132,7 +132,9 @@
       "sreDescription": "Lee las oraciones tan rápido como puedas y decide si son verdaderas o falsas.",
       "swrDescription": "Las palabras aparecerán rápidamente en la pantalla. Decide si son reales o inventadas.",
       "hostileAttributionName": "¿A Propósito o por Accidente?",
-      "hostileAttributionDescription": "Escucha las historias y responde a las preguntas."
+      "hostileAttributionDescription": "Escucha las historias y responde a las preguntas.",
+      "childSurveyName": "Pensamientos y Sentimientos", 
+      "childSurveyDescription": "Responde a las preguntas sobre tu estancia en el colegio."
     },
     "navbar": {
       "greeting": "¡Hola!",
