Fix: Restore missing Spanish translations for matrixReasoning
- Restored es-CO and es-AR translations for matrixReasoningDescription and matrixReasoningName
- These translations were accidentally removed during the Crowdin update process
- Regenerated JSON files to include the restored translations

--- a/src/translations/es/ar/es-AR-componentTranslations.json
+++ b/src/translations/es/ar/es-AR-componentTranslations.json
@@ -87,8 +87,8 @@
       "heartsAndFlowersName": "",
       "introDescription": "",
       "introName": "",
-      "matrixReasoningDescription": "",
-      "matrixReasoningName": "",
+      "matrixReasoningDescription": "Encuentra la pieza que falta para completar el rrompecabezas.",
+      "matrixReasoningName": "Razonamiento Matricial",
       "mefsDescription": "",
       "mefsName": "",
       "memoryGameDescription": "",
